src/css/base.css
/* ... */
@media (prefers-color-scheme: dark) {
  :root {
    --text-color: #dfdfdf;
    --main-rgb: 58, 58, 58;
    --disabled-color: #868686;
    --background-color: rgb(22, 22, 22);
    --selected-color: rgba(136, 136, 136, 0.582);
    --seperator-line: 1px solid rgba(225, 225, 225, 0.1);
  }
}

@media (prefers-reduced-motion) {
  :root {
    --animate-150: 0ms;
    --animate-200: 0ms;
    --animate-300: 0ms;
    --animate-500: 0ms;
  }
}

body {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: var(--background-color);
  font-family: var(--font-family);
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  user-select: none;
  overflow-x: hidden;
  overflow-y: hidden;
  padding: 0;
  margin: 0;
  flex-direction: column;
  color: var(--text-color);
}

header {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.wrapper {
  overflow-y: auto;
  overflow-x: hidden;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.card {
  min-width: 360px;
  max-width: 600px;
  color: inherit;
  padding: 1.5em;
  background: var(--main-color);
  position: relative;
  border-radius: 1.25em;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
  text-align: center;
  margin-bottom: 6.25em;
  margin: 2.29em 1.29em 0.25em;
  font-size: 1em;
}

a {
  color: inherit;
}

.button {
  appearance: none;
  display: inline-flex;
  min-width: 5.14em;
  margin: 0.29em 0.29em;
  color: var(--contrast-color, #ffffff);
  background-color: var(--pop-color, #333333);
  text-align: center;
  text-transform: uppercase;
  outline-width: 0;
  border-radius: 5px;
  padding: 0.7em 0.57em;
  cursor: pointer;
  position: relative;
  box-sizing: border-box;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
  -webkit-user-select: none;
  -webkit-tap-highlight-color: transparent;
  user-select: none;
  pointer-events: all;
  justify-content: center;
  align-items: center;
  transition: background-color var(--animate-150, 150ms) linear;
  transform: translate3d(0, 0, 0);
  flex-direction: row;
  border: none;
  overflow: visible;
}

.button:after {
  display: inline-block;
  width: 100%;
  height: 100%;
  border-radius: 5px;
  opacity: 0;
  transition: opacity var(--animate-150, 150ms) cubic-bezier(.33, .17, .85, 1.1);
  box-shadow: 0 8px 10px 1px rgba(0, 0, 0, .14), 0 3px 14px 2px rgba(0, 0, 0, .12), 0 5px 5px -3px rgba(0, 0, 0, .4);
  content: ' ';
  position: absolute;
  top: 0;
  left: 0;
}

.button:hover:after {
  opacity: 1;
}

.button:hover:active:after {
  opacity: 0;
}

.button[disabled] {
  background: rgba(84, 84, 84, 0.4);
  color: #ffffff;
  box-shadow: none;
  cursor: none;
  pointer-events: none;
}

.button[disabled]:active,
.button[disabled]:hover,
.button[disabled]:active:hover {
  box-shadow: none;
}

.button[noshadow],
.button[noshadow]:hover,
.button[noshadow]:hover:after,
.button[noshadow]:after {
  box-shadow: none;
}

.button[noshadow]:active {
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
}

.button>* {
  pointer-events: none;
}

.button :first-child {
  margin-right: 1em;
}

.button :nth-child(2) {
  display: flex;
  align-items: center;
  margin-right: 1em;
}

h1 {
  text-transform: uppercase;
  font-size: 1.5em;
}

p {
  margin: 0.5em auto;
  min-width: 300px;
}

svg {
  width: 1.5em;
  height: 1.5em;
}

#stations {
  overflow: hidden;
  width: 100%;
  height: fit-content;
  color: inherit;
  margin: 0;
  padding: 0;
  list-style-type: none;
}

#stations>li {
  margin: auto;
  max-width: 500px;
  padding: 0.5em;
  display: flex;
  justify-content: center;
  align-items: center;
  border-bottom: var(--seperator-line);
  transition: background-color var(--animate-500, 500ms) linear;
}

#stations>li>span {
  width: 100%;
  margin-left: 0.5em;
  display: block;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

#stations>li>div {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 0.8em;
  padding: 0.5em;
  background: rgba(var(--pop-rgb), 0.8);
  border-radius: 7px;
  color: var(--contrast-color);
  margin: 0 8px;
  max-height: 32px;
  min-height: 32px;
  min-width: 62px;
  transition: background-color var(--animate-500, 500ms) linear;
}

#stations>li[playing]>div {
  margin-right: 38px;
}

#stations>li[playing][selected]>div {
  background: var(--main-color);
  color: var(--text-color);
}

#stations>li:first-child {
  border-top: var(--seperator-line);
}

#stations>li:last-child {
  margin-bottom: 11.25em;
}

#stations>li[selected] {
  background: var(--selected-color);
}

#stations>li>.remove {
  display: none;
}

#stations>li[playing] {
  background: rgba(var(--pop-rgb), 0.4);
}

#stations>li[playing]>.play {
  display: none;
}

#stations>li[selected]>.remove {
  display: block;
}

#stations>li[selected][playing] {
  background: var(--pop-color);
  color: var(--contrast-color)
}

#stations>li[selected]>.add {
  display: none;
}


.fab {
  appearance: none;
  border: none;
  color: var(--contrast-color, #ffffff);
  background-color: var(--pop-color, #333333);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  box-sizing: border-box;
  cursor: pointer;
  height: 56px;
  min-width: 0;
  outline: none;
  padding: 1em;
  position: fixed;
  right: 1.25em;
  bottom: 1.25em;
  width: 56px;
  -webkit-tap-highlight-color: transparent;
  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
  z-index: 2;
}

.fab>* {
  pointer-events: none;
}
/* ... */

